# Fable.Logging

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Fable.Logging.sln  LICENSE  README.md  RELEASING.md  justfile  paket.dependencies  pyproject.toml
.config/: dotnet-tools.json
.github/workflows/: build-and-test.yml  publish.yml
src/: Common.fs  ConsoleLogger.fs  Fable.Logging.fsproj  Fable.Structlog.fs  ILogger.fs  LoggerFactory.fs
src/Fable.Logging/: CHANGELOG.md  Common.fs  ConsoleLogger.fs  Fable.Logging.fsproj  ILogger.fs  JSLogger.fs  LoggerFactory.fs
src/Fable.Logging.Beam/: BeamLogger.fs  CHANGELOG.md  Fable.Logging.Beam.fsproj  paket.references
src/Fable.Logging.Structlog/: CHANGELOG.md  Fable.Logging.Structlog.fsproj  Structlog.fs
test/: Fable.Logging.Test.fsproj  Main.fs  TestBeamLogger.fs  TestCommon.fs  TestConsoleLogger.fs  TestExtensions.fs  TestJSLogger.fs  TestLogLevel.fs  TestLoggerFactory.fs  TestStructlog.fs  TestUtils.fs  paket.references
