
[tool.poetry]
name = "logger"
version = "0.1.0"
description = "Python bindings for StructLog"
authors = ["Dag Brattli <dag@brattli.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.9, < 4.0"
fable-library = ">=0.8.0"
structlog = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
